# turbocode

./: .dockerignore  .env.claude.example  .env.example  .gitignore  .pre-commit-config.yaml  Alphonso Woodbury.txt  CLAUDE.md  Dockerfile  FAANG_CHAT_IMPLEMENTATION.md  JOB_SEARCH_IMPLEMENTATION.md  JOB_SEARCH_READY.md  JOB_SEARCH_STATUS.md  Makefile  README.md  README_COMPLETE_9_API_SETUP.md  README_JOB_SEARCH.md  WEBHOOK_INTEGRATION_GUIDE.md  aggregated_profile.json  create_ritmo_structure.py  docker-compose.yml  mcp.json  mkdocs.yml  pyproject.toml  turbosoft-brand-showcase.html  user_org_management.py
.github/workflows/: ci.yml  dependency-update.yml
.turbo/: config.toml
backups/: turbo_backup_20251008_203954.sql
docker/: Dockerfile.claude  Dockerfile.claude-code  Dockerfile.docs-watcher  Dockerfile.webhook  claude-code.Dockerfile  webhook-requirements.txt
docs/: ADZUNA_INTEGRATION_SUMMARY.md  API_KEY_SETUP_UI.md  ARCHITECTURE_SPLIT_PLAN.md  AUDIT_AGENT_GUIDE.md  AUTOMATED_DOC_UPLOAD.md  BUSINESS_VENTURES_SYSTEM.md  CAREER_FEATURES_DESIGN_QUESTIONNAIRE.md  CLI_REFERENCE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_JOB_SEARCH_IMPLEMENTATION.md  CROSS_PLATFORM_TECHNICAL_GUIDE.md  DAY_ONE_GOVERNANCE_FRAMEWORK.md  DEVELOPMENT.md  DOCKER_DEPLOYMENT.md  DOMAIN_APPS_GUIDE.md  ENTITY_KEYS_IMPLEMENTATION_STATUS.md  FEATURE_REQUESTS.md  FUTURE_FEATURES.md  GIT_WORKTREE_INTEGRATION.md  HEADER_MATTER_SPEC.md  ISSUE_REFINEMENT_GUIDE.md  JOB_SEARCH_SETUP.md  KNOWLEDGE_GRAPH_LOCAL.md  KNOWLEDGE_GRAPH_POC.md  MARKET_ANALYSIS.md  MULTI_API_JOB_SEARCH.md  PLATFORM_COMPONENTS_LIBRARY.md  QUICK_TEST_FOR_CLAUDE.md  README.md  README_TURBO_PLATFORM.md  RITMO_PLATFORM_VISION.md  SEMANTIC_SEARCH_PROOF.md  SLM_DEVELOPMENT_GUIDE.md  SOLO_DEVELOPER_STRATEGY.md  STAFF_SYSTEM_EPIC.md  STREAMING_API_GUIDE.md  SUBAGENT_ORCHESTRATION_PLAN.md  SUBAGENT_SETUP_STATUS.md  TESTING_GUIDE_FOR_CLAUDE.md  TEST_WITHOUT_GIT_ACCESS.md  (+29 more)
docs/.backups/: 003-context-prefetch-vs-mcp-connector.md  API_KEY_SETUP_UI.md  CLAUDE_INTEGRATION_ARCHITECTURE.md  CLI_REFERENCE.md  DEMO_USAGE.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_SETUP.md  DOCKER_DEPLOYMENT.md  FEATURE_REQUESTS.md  FOLIOS_CONCEPT.md  FUTURE_FEATURES.md  LIQUID_GLASS_UX_REFINEMENT_PLAN.md  LOCAL_AI_AGENTS_PLAN.md  PRD.md  README copy.md  README.md  SHARE_EXTENSION_SETUP.md  SHORTCUTS_GUIDE.md  STAFF_SYSTEM_EPIC.md  SUBAGENT_SETUP_STATUS.md  TESTING_STRATEGY.md  UI_DECISION_GUIDE.md  WEBHOOK_SYSTEM_DESIGN.md  agents-and-skills-guide.md  agents.md  claude-backend-comparison.md  claude-code-setup.md  claude-code-subagents-integration.md  hooks.md  neo4j-guide.md  pgadmin-guide.md  subagent-ui-integration.md  turbo-agents-skills-ultimate-guide.md
docs/adr/: 003-context-prefetch-vs-mcp-connector.md  README.md
docs/api/: API_SPECIFICATION.md
docs/architecture/: CLAUDE_INTEGRATION_ARCHITECTURE.md  LOCAL_AI_AGENTS_PLAN.md  TECHNICAL_ARCHITECTURE.md
docs/context/: BUILD_FIX_INSTRUCTIONS.md  CHRONIKLE_MARKETING_MASTER.md  CLAUDE.md  CLAUDE_ISSUE_MANAGEMENT.md  CONTEXT_MASTER_PLAN.md  DEMO_USAGE.md  DEVELOPMENT_STATUS.md  DEVOPS_STRATEGY.md  FOCUS_MODE_WORKAROUND.md  FOLIOS_CONCEPT.md  LIQUID_GLASS_UX_REFINEMENT_PLAN.md  MARKETING_STRATEGY.md  README copy.md  ReadMe.md  SHARE_EXTENSION_SETUP.md  SHORTCUTS_GUIDE.md
docs/deployment/: DEPLOYMENT_PLAN.md
docs/development/: CODE_STYLE_GUIDE.md  DEVELOPMENT_SETUP.md
docs/guides/: add-entity-to-unified-modal.md  neo4j-guide.md  pgadmin-guide.md
docs/integrations/: CLAUDE_CODE_INTEGRATION.md  agents.md  claude-code.md  hooks.md  mcp.md
docs/resumes/: Alphonso Woodbury.md
docs/specifications/: CLAUDE_INTEGRATION.md  DATA_MODELS.md  DEVELOPMENT_ROADMAP.md  PRD.md  TESTING_STRATEGY.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: TEMPLATE_PAGE.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: workspace-switcher.tsx
frontend/docs/: BOTTOM_TERMINAL_DESIGN.md  ENTITY_COMMENTS_PATTERN.md
frontend/hooks/: use-action-approvals.ts  use-agent-activity.ts  use-agents.ts  use-blueprints.ts  use-chat-shortcuts.ts  use-chat-sidebar.ts  use-comments.ts  use-companies.ts  use-contacts.ts  use-dependencies.ts  use-documents.ts  use-favorites.ts  (+31 more)
migrations/: 001_add_created_by_to_issues.sql  002_add_workspace_to_projects.sql  003_add_mentors.sql  003_add_mentors_sqlite.sql  005_add_resumes.sql  006_add_staff_system.sql  006_add_staff_system_sqlite.sql  007_add_group_discussions.sql  007_seed_leadership_staff.sql  008_add_staff_allowed_tools.sql  009_add_document_status_metadata.sql  010_add_assigned_to_fields.sql  011_add_conversation_memory_tables.sql  012_add_webhooks.sql  013_register_claude_code_webhook.sql  014_add_role_title_to_staff.sql  014_add_role_title_to_staff_sqlite.sql  015_migrate_mentors_to_staff.sql  015_migrate_mentors_to_staff_sqlite.sql  016_seed_initial_staff.sql  017_add_notes.sql  018_add_work_logs_and_ready_status.sql  019_add_entity_keys.sql  020_add_worktree_fields.sql  021_add_repository_path.sql  022_add_career_management_tables.sql  022_migrate_career_coach_to_staff.sql  023_add_work_experiences.sql  024_add_job_search_tables.sql  025_add_job_posting_interest_fields.sql  026_add_application_url.sql  add_polymorphic_comments.sql
scripts/: audit-docs.sh  backup_db.sh  claude_headless_service 2.py  claude_headless_service.py  claude_webhook_server.py  cleanup_emoji.py  create_agent_design_form.py  create_dependencies_table.sql  create_forms_tables.py  db_backup.sh  docs_audit_agent.py  docs_watcher.py  fix_markdown_descriptions.py  ingest_issues_to_graph.py  init-db.sql  local_webhook_server.py  migrate_add_conversation_memory.py  migrate_add_podcasts.py  migrate_docs_to_turbo.py  populate_knowledge_graph.py  populate_work_experience.py  remove_emojis_from_docs.py  restore_db.sh  run_streamlit.py  seed_leadership_staff.py  test_semantic_search.py
skills/: README.md
subagents/: registry.json
tests/: __init__.py  conftest.py
turbo/: __init__.py  claude_service.py  main.py  mcp_server.py
(+425 files in other folders)
